[gd_scene load_steps=4 format=3 uid="uid://d2tnrme5j7xrt"]

[ext_resource type="Theme" uid="uid://1jb11niidntv" path="res://themes/default.tres" id="1_3r7em"]
[ext_resource type="PackedScene" uid="uid://dvokuf8gpcq1q" path="res://scenes/knob.tscn" id="1_eq62o"]
[ext_resource type="Script" path="res://scenes/scripts/delay.gd" id="1_x0q6g"]

[node name="PanelContainer" type="PanelContainer"]
offset_right = 200.0
mouse_filter = 1
script = ExtResource("1_x0q6g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_3r7em")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Delay"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Enable"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DelayKnob" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_eq62o")]
layout_mode = 2
max_value = 500.0
sensitivity = 0.25
title = "Delay"
current_value = 300.0

[node name="FeedbackKnob" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_eq62o")]
layout_mode = 2
max_value = 1.0
step = 0.01
sensitivity = 0.25
title = "Feedback"
current_value = 0.25

[node name="DryMixKnob" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_eq62o")]
layout_mode = 2
max_value = 1.0
step = 0.001
sensitivity = 0.25
title = "Dry"
current_value = 1.0

[node name="WetMixKnob" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_eq62o")]
layout_mode = 2
max_value = 1.0
step = 0.001
sensitivity = 0.25
title = "Wet"
current_value = 0.5

[connection signal="toggled" from="VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/DelayKnob" to="." method="_on_delay_knob_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/FeedbackKnob" to="." method="_on_feedback_knob_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/DryMixKnob" to="." method="_on_dry_mix_knob_value_changed"]
